Fixed issue where nav bar covered content

--- a/ngRotahu/src/app/app.component.css
+++ b/ngRotahu/src/app/app.component.css
@@ -9,3 +9,7 @@
   top: 0;
   width: 100%;
 }
+
+#content{
+  margin-top: 60px;
+}
